# modular-libjson-rpc-cpp

./: CMakeLists.txt  ModularServer.h  README.md  main.cpp  mod.sh  update.sh
example/: AInterface.h  AInterfaceModule.h  BInterface.h  BInterfaceModule.h  CInterface.h  CInterfaceModule.h  moduleA.json  moduleB.json  moduleC.json
